<resources>
    <string name="app_name">E-commerce M FYP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopName">shop name</string>
    <string name="shopAddress">shop address</string>
    <string name="ownerName">owner name</string>
    <string name="ownerContact">owner contact</string>
    <string name="shopRegistrationCode">shop registration code</string>
    <string name="passwordHint">new password here</string>
    <string name="title_activity_upload_real_photo">UploadRealPhoto</string>
    <string name="notification">Notification</string>
    <string name="aboutus">About Us</string>
    <string name="aboutUsArticle">At Cashierbook, our aim is to offer our customer speedy and quality online purchasing experience.\n\nWe believe that online shopping is a right. We promise to try our best to deliver the best products at the most reasonable prices,
        and deliver to you with the shortest time.\n\nWe started as a small business in Tunku Abdul Rahman University College (TARUC) MALAYSIA at 2017. Our aim is to continue providing our customers with same day delivering products that keep customer having the best online shopping experience. We care about consumer rights and we will spent all of our effort to ensure all parties will get fair and balanced benefits.\n\nDo you looking e-commerce that able to delivery at the same day? You"'"re in the right place. We strive to be more social and innovative, offering our customers something they want, putting desires at the top of our priority list</string>
    <string name="oldPwd">Old Password</string>
    <string name="newPwd">New Password</string>
    <string name="newPwd2">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="summary">Summary</string>
    <string name="sales">Sales</string>
    <string name="name">Name</string>
    <string name="newOwnerName">new owner name</string>
    <string name="contact">Contact</string>
    <string name="newContact">new owner contact</string>
    <string name="desc">Description</string>
    <string name="newShopDesc">new shop description</string>
    <string name="confirmSubmit">Confirm and submit</string>
    <string name="category">Category</string>
    <string name="wordremain">300 character(s) left</string>
    <string name="writeHere">Write something here</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="salesreport">Daily Sales Report</string>
    <string name="selectedDate">selected date:</string>
    <string name="monthlysales">Monthly Sales</string>
    <string name="grossprofit">Gross Profit:</string>
    <string name="transChrg">Transaction Charge 1%</string>
    <string name="refundChrg">Refund Charges 2.5%</string>
    <string name="totalTransaction">Total transaction</string>
    <string name="totalItemsold">Total item sold</string>
    <string name="week">Week</string>
    <string name="loading">Loading</string>
    <string name="prepareingSalesReport">Preparing your sales report</string>
    <string name="sessionexp">Session Expired. Please login again</string>
    <string name="preparingDailySales">Preparing your daily sales report</string>
    <string name="prodname">Product Name</string>
    <string name="variant">Variant</string>
    <string name="price">Price</string>
    <string name="qty">Qty</string>
    <string name="orderToConfirm">Order to confirm</string>
    <string name="ordertopack">Order to pack</string>
    <string name="registerNewProd">Register new Products</string>
    <string name="manageProd">Manage Products</string>
    <string name="viewSalesReport">View Sales Report</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="prepareCustomerOrder">Preparing your customer order</string>
    <string name="updating">Updating…</string>
    <string name="updatingOrderList">updating your order list, please wait</string>
    <string name="cancelOrder">canceling order</string>
    <string name="cancelorderMsg">canceling customer order, existing item will not be shown to customer, please wait</string>
    <string name="doneUpdateOrder">Done update order cart</string>
    <string name="cancelOrderWarning">Warning!!!\n\n-Cancel order will make customer unable to search your canceled products and label as sold out. \n-System will refund canceled order item money to our customer and the refund cost will pay by retailer (you).\n-each cancelation consider short selling\n-when number of short selling reached our threshold limit, your account will be freezed for investigation \n\nAre you sure want to cancel order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="doneCancel">Done cancel order</string>
    <string name="delayCancelMsg">We strongly not encourage short selling. Are you sure want to proceed?</string>
    <string name="cancel">Cancel</string>
    <string name="orderid">OrderID :</string>
    <string name="item">Item:</string>
    <string name="var">Var  :</string>
    <string name="qty2">Qty  :</string>
    <string name="dateissue">Date issue:</string>
    <string name="managePost">Manage My Post</string>
    <string name="noNotf">No Notification Here</string>
    <string name="manageSerial">Manage Serial No.</string>
    <string name="orderDate">Order date:</string>
    <string name="confirmStock">confirm stock</string>
    <string name="outOfStock">out of stock</string>
    <string name="prodSize">Product Size</string>
    <string name="prodTitle">Product Title</string>
    <string name="prodVarDetails">Product Variant Details</string>
    <string name="type">Type</string>
    <string name="quantity">Quantity</string>
    <string name="discount">Discount</string>
    <string name="addVar">Add Variant</string>
    <string name="prodDesc">Product description</string>
    <string name="registerProdDetail">Register Product Details</string>
    <string name="serialMsg">optional field, apply for expensive item tracking such as smartphone serial code (IMEI).</string>
    <string name="delete">Delete</string>
    <string name="updateItem">Update item</string>
    <string name="existSerial">Existing serial no.</string>
    <string name="newSerial">New serial</string>
    <string name="add">Add</string>
    <string name="serialMsg2">Serial code is only for tracking expensive product purpose, you can ignore this field if the current product has no serial code.</string>
    <string name="insertSerial">Insert serial code</string>
    <string name="itemRegisterSucc">Item register successfully</string>
    <string name="itemDltSucc">Item delete successfully</string>
    <string name="plsChkSD">Please check SD card! Image shot is impossible!</string>
    <string name="selectFromCamera">Shoot Image From Camera</string>
    <string name="selectFromGallery">Select Image From Gallery</string>
    <string name="deleteVar">Delete Variant</string>
    <string name="deleteVarMsg">Are you sure want to delete this variant?</string>
    <string name="emptyMsg">Field can"'"t be empty</string>
    <string name="coverImgMsg">Image Cover Required</string>
    <string name="camPermissionDenied">Permission Canceled, need permission to access CAMERA.</string>
    <string name="loadingSerial">Loading Serial code list</string>
    <string name="deletingMsg">Item is Deleting</string>
    <string name="plsWait">Please wait…</string>
    <string name="addImg">Add Image</string>
    <string name="loadItemDetail">Loading Item Details</string>
    <string name="itemUploading">Item is Uploading</string>
    <string name="account">ACCOUNT</string>
    <string name="chgPwd">Change password</string>
    <string name="logout">Log Out</string>
    <string name="aboutApp">ABOUT THIS APP</string>
    <string name="feedback">Feedback</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="version">Version</string>
    <string name="TOS">Terms of Service</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="contactus">Contact Us</string>
    <string name="aboutCB">About Cashierbook</string>
    <string name="confirmPwdErr">Confirm password not match</string>
    <string name="chgingPwd">Changing Password</string>
    <string name="smthgWrg">Something went wrong. Please try again later</string>
    <string name="chgPwdScc">Password Successfully Modified</string>
    <string name="authFail">Authentication Failed</string>
    <string name="minFeedback">Please write more than 10 words</string>
    <string name="submitFeedback">Feedback Submitting</string>
    <string name="submitFeedbackScc">Feedback sent successfully! Thank You!</string>
    <string name="wordremain2"> character(s) left</string>
    <string name="assignSerialMsg">Choose correct serial code to assign into item.</string>
    <string name="assignedSerial">Assigned serial code</string>
    <string name="assignRemain">item remaining to assign:</string>
    <string name="donePack">Done packing</string>
    <string name="profileUpdate">Profile Update</string>
    <string name="profileUpdateMsg">Are you sure want to update retailer details?</string>
    <string name="update">UPDATE</string>
    <string name="ownerEmpty">Owner name cannot be blank</string>
    <string name="ownerContactEmpty">Owner contact cannot be blank</string>
    <string name="ownerShopEmpty">Shop Description cannot be blank</string>
    <string name="profileUpdate2">Profile is updating</string>
    <string name="error">Error</string>
    <string name="noInternet">No internet connection</string>
    <string name="tryAgn">TRY AGAIN</string>
    <string name="exit">Exit</string>
    <string name="exitMsg">Are you sure you want to close this app?</string>
    <string name="editProfile">Edit Profile</string>
    <string name="shopName2">Shop Name:</string>
    <string name="shopAdd">Shop Address:</string>
    <string name="ownerName2">Owner Name:</string>
    <string name="ownerContact2">Owner Contact:</string>
    <string name="ownerEmail">Owner Email:</string>
    <string name="shopRegCode">Shop Registration Code:</string>
    <string name="shopDesc">Shop Description:</string>
    <string name="orderConfirmMsg">Please snap real stock photo to confirm stock availability</string>
    <string name="productPht">Product photo</string>
    <string name="serialcode">Serialcode/barcode (optional)</string>
    <string name="confirmUpload">Confirm and upload</string>
    <string name="outOfStockMsg">Are you sure is out of stock?</string>
    <string name="insertPhoto">Please insert at least one photo!</string>
    <string name="imgUploading">Image is uploading…</string>
    <string name="uploadScc">Photo uploaded successfully</string>
    <string name="dltSerialMsg">Deleting serial code</string>
    <string name="assigningSerial">Assigning serial code</string>
    <string name="newOrder">New Order</string>
    <string name="pendingOrder">Pending Order</string>
    <string name="chkStockReply">Please check stock and reply</string>
    <string name="newOrderFromCus">New order from customer, please pack item</string>
    <string name="ago">ago</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="year">year</string>
    <string name="boostProduct">Boost Products Sales</string>
    <string name="cartChkout">Cart checkout</string>
    <string name="deliveryStatus">Item Delivery status</string>
    <string name="cancelReport">View Cancel Report</string>
    <string name="canceltype">Cancel Type</string>
    <string name="canceldetail">Cancel Detail</string>
    <string name="count">Count</string>
</resources>