<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_data_settings"
        android:title="@string/account"
        >
        <Preference
            android:icon="@drawable/edit_password_icon"
            android:key="change_password_key"
            android:title="@string/chgPwd" />

        <Preference
            android:icon="@drawable/logout_icon"
            android:key="logout_key"
            android:title="@string/logout" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/aboutApp"
        android:key="pref_key_information_settings">

        <Preference
            android:key="feedback_key"
            android:title="@string/feedback"
            android:summary="@string/sendFeedback"/>

        <Preference
            android:key="version_key"
            android:summary="Version 1.0.5"
            android:title="@string/version"
            />
        <Preference
            android:key="tos_key"
            android:title="@string/TOS"
            />
        <Preference
            android:key="privacypolicy_key"
            android:title="@string/privacyPolicy"
            />
        <Preference
            android:key="contact_key"
            android:title="@string/contactus"
            />

        <Preference
            android:key="about_key"
            android:title="@string/aboutCB"
            />


    </PreferenceCategory>
</PreferenceScreen>