<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:layout_width="match_parent"
    android:paddingRight="70dp"
    android:paddingLeft="70dp"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:textStyle="bold"
    android:textSize="18sp"
    android:layout_centerHorizontal="true"
    android:text="@string/delayCancelMsg"
    android:id="@+id/shortsellLabel"
    android:paddingTop="10dp"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/shortsellLabel"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    >


<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Button
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/shortsellConfirmBut"
        android:text="@string/confirm"
        android:backgroundTint="@color/scarletRed"
        style="@style/Widget.AppCompat.Button.Colored"
        />
    <ProgressBar
        android:id="@+id/shortSellProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_alignStart="@+id/shortsellConfirmBut"
        android:layout_alignEnd="@+id/shortsellConfirmBut"
        android:layout_alignBottom="@+id/shortsellConfirmBut"
        android:max="10000"/>
</RelativeLayout>
    <Button
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:id="@+id/shortsellCancelBut"
        android:text="@string/cancel"/>

</LinearLayout>




</RelativeLayout>